Added constraints to Task Endpoint
