# app/user_types.go
@@ -12,6 +12,7 @@ package app
 
 import (
 	"github.com/goadesign/goa"
+	"unicode/utf8"
 )
 
 // servicePayload user type.
@@ -96,7 +97,7 @@ func (ut *ServicePayload) Validate() (err error) {
 type taskPayload struct {
 	Delay  *int            `form:"delay,omitempty" json:"delay,omitempty" xml:"delay,omitempty"`
 	Master *servicePayload `form:"master,omitempty" json:"master,omitempty" xml:"master,omitempty"`
-	// Task Name
+	// Task Name Identifier
 	Name        *string         `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
 	WaitCommand *waitCommand    `form:"waitCommand,omitempty" json:"waitCommand,omitempty" xml:"waitCommand,omitempty"`
 	Worker      *servicePayload `form:"worker,omitempty" json:"worker,omitempty" xml:"worker,omitempty"`
@@ -104,6 +105,15 @@ type taskPayload struct {
 
 // Validate validates the taskPayload type instance.
 func (ut *taskPayload) Validate() (err error) {
+	if ut.Name == nil {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "name"))
+	}
+	if ut.Worker == nil {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "worker"))
+	}
+	if ut.Master == nil {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`request`, "master"))
+	}
 	if ut.Delay != nil {
 		if *ut.Delay < 0 {
 			err = goa.MergeErrors(err, goa.InvalidRangeError(`request.delay`, *ut.Delay, 0, true))
@@ -112,6 +122,16 @@ func (ut *taskPayload) Validate() (err error) {
 	if ut.Master != nil {
 		if err2 := ut.Master.Validate(); err2 != nil {
 			err = goa.MergeErrors(err, err2)
+		}
+	}
+	if ut.Name != nil {
+		if utf8.RuneCountInString(*ut.Name) < 3 {
+			err = goa.MergeErrors(err, goa.InvalidLengthError(`request.name`, *ut.Name, utf8.RuneCountInString(*ut.Name), 3, true))
+		}
+	}
+	if ut.Name != nil {
+		if utf8.RuneCountInString(*ut.Name) > 10 {
+			err = goa.MergeErrors(err, goa.InvalidLengthError(`request.name`, *ut.Name, utf8.RuneCountInString(*ut.Name), 10, false))
 		}
 	}
 	if ut.Worker != nil {
@@ -132,7 +152,7 @@ func (ut *taskPayload) Publicize() *TaskPayload {
 		pub.Master = ut.Master.Publicize()
 	}
 	if ut.Name != nil {
-		pub.Name = ut.Name
+		pub.Name = *ut.Name
 	}
 	if ut.WaitCommand != nil {
 		pub.WaitCommand = ut.WaitCommand.Publicize()
@@ -146,15 +166,24 @@ func (ut *taskPayload) Publicize() *TaskPayload {
 // TaskPayload user type.
 type TaskPayload struct {
 	Delay  *int            `form:"delay,omitempty" json:"delay,omitempty" xml:"delay,omitempty"`
-	Master *ServicePayload `form:"master,omitempty" json:"master,omitempty" xml:"master,omitempty"`
-	// Task Name
-	Name        *string         `form:"name,omitempty" json:"name,omitempty" xml:"name,omitempty"`
+	Master *ServicePayload `form:"master" json:"master" xml:"master"`
+	// Task Name Identifier
+	Name        string          `form:"name" json:"name" xml:"name"`
 	WaitCommand *WaitCommand    `form:"waitCommand,omitempty" json:"waitCommand,omitempty" xml:"waitCommand,omitempty"`
-	Worker      *ServicePayload `form:"worker,omitempty" json:"worker,omitempty" xml:"worker,omitempty"`
+	Worker      *ServicePayload `form:"worker" json:"worker" xml:"worker"`
 }
 
 // Validate validates the TaskPayload type instance.
 func (ut *TaskPayload) Validate() (err error) {
+	if ut.Name == "" {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "name"))
+	}
+	if ut.Worker == nil {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "worker"))
+	}
+	if ut.Master == nil {
+		err = goa.MergeErrors(err, goa.MissingAttributeError(`type`, "master"))
+	}
 	if ut.Delay != nil {
 		if *ut.Delay < 0 {
 			err = goa.MergeErrors(err, goa.InvalidRangeError(`type.delay`, *ut.Delay, 0, true))
@@ -164,6 +193,12 @@ func (ut *TaskPayload) Validate() (err error) {
 		if err2 := ut.Master.Validate(); err2 != nil {
 			err = goa.MergeErrors(err, err2)
 		}
+	}
+	if utf8.RuneCountInString(ut.Name) < 3 {
+		err = goa.MergeErrors(err, goa.InvalidLengthError(`type.name`, ut.Name, utf8.RuneCountInString(ut.Name), 3, true))
+	}
+	if utf8.RuneCountInString(ut.Name) > 10 {
+		err = goa.MergeErrors(err, goa.InvalidLengthError(`type.name`, ut.Name, utf8.RuneCountInString(ut.Name), 10, false))
 	}
 	if ut.Worker != nil {
 		if err2 := ut.Worker.Validate(); err2 != nil {
