# swagger/swagger.yaml
@@ -5,11 +5,11 @@ definitions:
   AtqDatabindUpload:
     description: User upload files response (default view)
     example:
-      id: c996b504-6476-4681-b366-0650841bfa51
+      id: e1723062-2cea-404b-b9f8-7c33f971824b
     properties:
       id:
         description: Upload ID
-        example: c996b504-6476-4681-b366-0650841bfa51
+        example: e1723062-2cea-404b-b9f8-7c33f971824b
         format: uuid
         type: string
     title: 'Mediatype identifier: application/atq.databind.upload+json; view=default'
@@ -18,7 +18,8 @@ definitions:
     description: AtqDatabindUploadCollection is the media type for an array of AtqDatabindUpload
       (default view)
     example:
-    - id: c996b504-6476-4681-b366-0650841bfa51
+    - id: e1723062-2cea-404b-b9f8-7c33f971824b
+    - id: e1723062-2cea-404b-b9f8-7c33f971824b
     items:
       $ref: '#/definitions/AtqDatabindUpload'
     title: 'Mediatype identifier: application/atq.databind.upload+json; type=collection;
@@ -116,7 +117,7 @@ definitions:
         image: hello-world
         replicas: 1.630704420498289e+18
         tty: true
-      name: Nemo qui in.
+      name: o1zxg
       waitCommand:
         command: Sit sed.
         expectedResult: Perferendis voluptas doloremque iure.
@@ -138,13 +139,19 @@ definitions:
       master:
         $ref: '#/definitions/ServicePayload'
       name:
-        description: Task Name
-        example: Nemo qui in.
+        description: Task Name Identifier
+        example: o1zxg
+        maxLength: 10
+        minLength: 3
         type: string
       waitCommand:
         $ref: '#/definitions/WaitCommand'
       worker:
         $ref: '#/definitions/ServicePayload'
+    required:
+    - name
+    - worker
+    - master
     title: TaskPayload
     type: object
   UploadPayload:
